--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["blit", "drawables"]
+  "cSpell.words": ["blit", "drawables"],
+  "python.analysis.typeCheckingMode": "standard"
 }
