Clean up git repo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["blit", "drawables"],
+  "cSpell.words": ["blit", "Counterspell", "drawables", "Mish", "Pygame"],
   "python.analysis.typeCheckingMode": "standard"
 }
