Add functions for getting player pos using tiles as coordinate system

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
-  "cSpell.words": ["blit", "Counterspell", "drawables", "Mish", "Pygame"],
+  "cSpell.words": [
+    "blit",
+    "Counterspell",
+    "drawables",
+    "KEYUP",
+    "Mish",
+    "Pygame",
+    "tickable",
+    "tilemap"
+  ],
   "python.analysis.typeCheckingMode": "standard"
 }
