--- a/.github/workflows/pygbag.yaml
+++ b/.github/workflows/pygbag.yaml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - master
 jobs:
   build-pygbag:
     name: Build for Emscripten pygbag runtime
