Automatically scale game based on resolution

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,8 @@
     "Pygbag",
     "Respawn",
     "tickable",
-    "tilemap"
+    "tilemap",
+    "VIDEORESIZE"
   ],
   "python.analysis.typeCheckingMode": "standard"
 }
